2003-09-07  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/web/__init__.py (__initHooks): added http 
	logging function to PostRequest hook.

	* SkunkWeb/Services/templating/Handler.py (requestHandler):
	commenting out debug statements inside for loop.

	* SkunkWeb/sw.conf.in: fix for logfile paths, and added http
	access log.

	* SkunkWeb/Services/web/protocol.py (HTTPConnection.__init__):
	added a "_rawOutput" attribute to CONNECTION, to support http
	logging; (_accesslog): added hook function for CLF http access
	logging, based on patch by Jeroen van Dongen. 

	* SkunkWeb/SkunkWeb/confvars.py.in (DEFAULT_HTTP_ACCESS_LOG),
	SkunkWeb/SkunkWeb/LogObj.py: support for separate http access log.

	* pylibs/Logger.py (HTTP_ACCESS): CLF HTTP access logging, based
	on a patch from Jeroen van Dongen.

2003-08-27  Jacob Smullyan  <smulloni@smullyan.org>

	* docs/manual/instConfig.txt: some little changes.

2003-08-23  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/swmgr.in: typo-type bug fix.

	* pylibs/Date/Format.py (_DateFormatter.format): stop passing 
	the mx.DateTime tuple() to time.strftime, as it causes a
	DeprecationWarning with Python 2.3 (until Lemburg fixes it, at
	least) and is pointless anyway.

2003-08-22    <smulloni@smullyan.org>

	* configure.in: some cleanup (removed commented out junk), stopped
	testing for xargs (only needed for deprecated cache cleaning
	functionality).

	* SkunkWeb/configure.in: no longer test for bash at all.

2003-08-22    <smulloni@localhost>

	* SkunkWeb/Services/product/productwiz.in: now an swpython
	shebang.

	* SkunkWeb/swmgr.in: rewritten so that it works with ash, which
	means, I hope, that it will work with just about anything.

2003-08-22  Jacob Smullyan <smulloni@smullyan.org>

	* SkunkWeb/Services/sessionHandler/Session.py (Session.setDirty): 
	restoring mutator method that I had inadvertently removed.

2003-08-16  Jacob Smullyan  <smulloni@smullyan.org>
